aws-publish/cdk.out/aws2.template.json
{
 "Resources": {
  "DefaultVPC5503DC78": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/Resource"
   }
  },
  "DefaultVPCPublicSubnet1Subnet45857342": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet1/Subnet"
   }
  },
  "DefaultVPCPublicSubnet1RouteTableD432FC9A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet1/RouteTable"
   }
  },
  "DefaultVPCPublicSubnet1RouteTableAssociation0C4E2762": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DefaultVPCPublicSubnet1RouteTableD432FC9A"
    },
    "SubnetId": {
     "Ref": "DefaultVPCPublicSubnet1Subnet45857342"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "DefaultVPCPublicSubnet1DefaultRoute3A52FCAC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DefaultVPCIGW896174DD"
    },
    "RouteTableId": {
     "Ref": "DefaultVPCPublicSubnet1RouteTableD432FC9A"
    }
   },
   "DependsOn": [
    "DefaultVPCVPCGW0B423978"
   ],
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "DefaultVPCPublicSubnet1EIP3DE2E08C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet1/EIP"
   }
  },
  "DefaultVPCPublicSubnet1NATGateway0D561ED0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DefaultVPCPublicSubnet1EIP3DE2E08C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "DefaultVPCPublicSubnet1Subnet45857342"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "DefaultVPCPublicSubnet1DefaultRoute3A52FCAC",
    "DefaultVPCPublicSubnet1RouteTableAssociation0C4E2762"
   ],
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet1/NATGateway"
   }
  },
  "DefaultVPCPublicSubnet2Subnet21115AAE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet2/Subnet"
   }
  },
  "DefaultVPCPublicSubnet2RouteTableFD927984": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet2/RouteTable"
   }
  },
  "DefaultVPCPublicSubnet2RouteTableAssociationD1D339EB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DefaultVPCPublicSubnet2RouteTableFD927984"
    },
    "SubnetId": {
     "Ref": "DefaultVPCPublicSubnet2Subnet21115AAE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "DefaultVPCPublicSubnet2DefaultRoute584C6E3B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "DefaultVPCIGW896174DD"
    },
    "RouteTableId": {
     "Ref": "DefaultVPCPublicSubnet2RouteTableFD927984"
    }
   },
   "DependsOn": [
    "DefaultVPCVPCGW0B423978"
   ],
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "DefaultVPCPublicSubnet2EIPDA98A43D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet2/EIP"
   }
  },
  "DefaultVPCPublicSubnet2NATGatewayF8AD1A18": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "DefaultVPCPublicSubnet2EIPDA98A43D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "DefaultVPCPublicSubnet2Subnet21115AAE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "DefaultVPCPublicSubnet2DefaultRoute584C6E3B",
    "DefaultVPCPublicSubnet2RouteTableAssociationD1D339EB"
   ],
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PublicSubnet2/NATGateway"
   }
  },
  "DefaultVPCPrivateSubnet1Subnet69F61BC0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet1/Subnet"
   }
  },
  "DefaultVPCPrivateSubnet1RouteTable80B3BCFC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet1/RouteTable"
   }
  },
  "DefaultVPCPrivateSubnet1RouteTableAssociationC4A133AC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DefaultVPCPrivateSubnet1RouteTable80B3BCFC"
    },
    "SubnetId": {
     "Ref": "DefaultVPCPrivateSubnet1Subnet69F61BC0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "DefaultVPCPrivateSubnet1DefaultRoute1AB9A008": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DefaultVPCPublicSubnet1NATGateway0D561ED0"
    },
    "RouteTableId": {
     "Ref": "DefaultVPCPrivateSubnet1RouteTable80B3BCFC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "DefaultVPCPrivateSubnet2Subnet79FDD6A9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet2/Subnet"
   }
  },
  "DefaultVPCPrivateSubnet2RouteTable8361218C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet2/RouteTable"
   }
  },
  "DefaultVPCPrivateSubnet2RouteTableAssociation50C7324F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DefaultVPCPrivateSubnet2RouteTable8361218C"
    },
    "SubnetId": {
     "Ref": "DefaultVPCPrivateSubnet2Subnet79FDD6A9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "DefaultVPCPrivateSubnet2DefaultRouteBE7981E3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "DefaultVPCPublicSubnet2NATGatewayF8AD1A18"
    },
    "RouteTableId": {
     "Ref": "DefaultVPCPrivateSubnet2RouteTable8361218C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "DefaultVPCIGW896174DD": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DefaultVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/IGW"
   }
  },
  "DefaultVPCVPCGW0B423978": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "DefaultVPCIGW896174DD"
    },
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultVPC/VPCGW"
   }
  },
  "DefaultECSCluster17B1E1C8": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultECSCluster/Resource"
   }
  },
  "DefaultECSClusterSecurityGroupF822A7BB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws2/DefaultECSClusterSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultECSClusterSecurityGroup/Resource"
   }
  },
  "DefaultECSClusterSecurityGroupfromaws2ProjectapiLBSecurityGroup051D5AE380806F3B416C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "DefaultECSClusterSecurityGroupF822A7BB",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ProjectapiLBSecurityGroup7515A7CF",
      "GroupId"
     ]
    },
    "ToPort": 8080
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DefaultECSClusterSecurityGroup/from aws2ProjectapiLBSecurityGroup051D5AE3:8080"
   }
  },
  "ProjectapiLB099E937B": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ProjectapiLBSecurityGroup7515A7CF",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "DefaultVPCPublicSubnet1Subnet45857342"
     },
     {
      "Ref": "DefaultVPCPublicSubnet2Subnet21115AAE"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "DefaultVPCPublicSubnet1DefaultRoute3A52FCAC",
    "DefaultVPCPublicSubnet1RouteTableAssociation0C4E2762",
    "DefaultVPCPublicSubnet2DefaultRoute584C6E3B",
    "DefaultVPCPublicSubnet2RouteTableAssociationD1D339EB"
   ],
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/LB/Resource"
   }
  },
  "ProjectapiLBSecurityGroup7515A7CF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB aws2ProjectapiLB148C51B7",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/LB/SecurityGroup/Resource"
   }
  },
  "ProjectapiLBSecurityGrouptoaws2DefaultECSClusterSecurityGroup212C401D80807B9501EF": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DefaultECSClusterSecurityGroupF822A7BB",
      "GroupId"
     ]
    },
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "ProjectapiLBSecurityGroup7515A7CF",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8080
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/LB/SecurityGroup/to aws2DefaultECSClusterSecurityGroup212C401D:8080"
   }
  },
  "ProjectapiLBPublicListener6D88C5F9": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ProjectapiLBPublicListenerECSGroup415F2EDD"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ProjectapiLB099E937B"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/LB/PublicListener/Resource"
   }
  },
  "ProjectapiLBPublicListenerECSGroup415F2EDD": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "DefaultVPC5503DC78"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "ProjectapiLBHttpsB2D31C8D": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "Certificates": [
     {
      "CertificateArn": {
       "Ref": "DaveCert477C16C8"
      }
     }
    ],
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ProjectapiLBPublicListenerECSGroup415F2EDD"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ProjectapiLB099E937B"
    },
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/LB/Https/Resource"
   }
  },
  "ProjectapiTaskDefTaskRoleCD3FA7A0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/TaskDef/TaskRole/Resource"
   }
  },
  "ProjectapiTaskDef09A8798F": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY",
        "Value": "in_memory"
       },
       {
        "Name": "ASPNETCORE_FORWARDEDHEADERS_ENABLED",
        "Value": "true"
       },
       {
        "Name": "ConnectionStrings__JiraSync",
        "Value": "Data Source=/tmp/jirasync.db"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "991795635857.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-991795635857-us-east-1:24e140825aefb5547ffbf9d547e8bd2c158edfaaacc6c28fe33af87a41bfc5fd"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ProjectapiTaskDefwebLogGroup397DE125"
        },
        "awslogs-stream-prefix": "Project-api",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 8080,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "1024",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ProjectapiTaskDefExecutionRole10D725F0",
      "Arn"
     ]
    },
    "Family": "aws2ProjectapiTaskDef8CEC0105",
    "Memory": "2048",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ProjectapiTaskDefTaskRoleCD3FA7A0",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/TaskDef/Resource"
   }
  },
  "ProjectapiTaskDefwebLogGroup397DE125": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/TaskDef/web/LogGroup/Resource"
   }
  },
  "ProjectapiTaskDefExecutionRole10D725F0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/TaskDef/ExecutionRole/Resource"
   }
  },
  "ProjectapiTaskDefExecutionRoleDefaultPolicy0DBCDF03": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:us-east-1:991795635857:repository/cdk-hnb659fds-container-assets-991795635857-us-east-1"
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ProjectapiTaskDefwebLogGroup397DE125",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ProjectapiTaskDefExecutionRoleDefaultPolicy0DBCDF03",
    "Roles": [
     {
      "Ref": "ProjectapiTaskDefExecutionRole10D725F0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "ProjectapiService025A91D0": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "DefaultECSCluster17B1E1C8"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 2,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 8080,
      "TargetGroupArn": {
       "Ref": "ProjectapiLBPublicListenerECSGroup415F2EDD"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "DefaultECSClusterSecurityGroupF822A7BB",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "DefaultVPCPrivateSubnet1Subnet69F61BC0"
       },
       {
        "Ref": "DefaultVPCPrivateSubnet2Subnet79FDD6A9"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "ProjectapiTaskDef09A8798F"
    }
   },
   "DependsOn": [
    "ProjectapiLBHttpsB2D31C8D",
    "ProjectapiLBPublicListenerECSGroup415F2EDD",
    "ProjectapiLBPublicListener6D88C5F9",
    "ProjectapiTaskDefTaskRoleCD3FA7A0"
   ],
   "Metadata": {
    "aws:cdk:path": "aws2/Project-api/Service/Service"
   }
  },
  "DaveCert477C16C8": {
   "Type": "AWS::CertificateManager::Certificate",
   "Properties": {
    "DomainName": "jsg.appcloud.systems",
    "DomainValidationOptions": [
     {
      "DomainName": "jsg.appcloud.systems",
      "HostedZoneId": "Z06422172SASV44F5Y8VA"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws2/DaveCert"
     }
    ],
    "ValidationMethod": "DNS"
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DaveCert/Resource"
   }
  },
  "DaveAlias64005A5B": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "AliasTarget": {
     "DNSName": {
      "Fn::Join": [
       "",
       [
        "dualstack.",
        {
         "Fn::GetAtt": [
          "ProjectapiLB099E937B",
          "DNSName"
         ]
        }
       ]
      ]
     },
     "HostedZoneId": {
      "Fn::GetAtt": [
       "ProjectapiLB099E937B",
       "CanonicalHostedZoneID"
      ]
     }
    },
    "HostedZoneId": "Z06422172SASV44F5Y8VA",
    "Name": "jsg.appcloud.systems.",
    "Type": "A"
   },
   "Metadata": {
    "aws:cdk:path": "aws2/DaveAlias/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SwW4iMQz9lt5DoFRbaQ97oJRWSBWLZhBX5Alm6iUko9gDQqP591UywLDd1Z78/PKc+NkZ6/HTsx49wIkHZrsfWCp0kwuYvYITbxo0Y92sK6OmO7deTtWyLiyZvC4cSuR6lPlacAWFxZ7vuQmzNwRC3t3EEczmyxgWIO8geIKzWgY6gmB/8dwJBoc3QdfJJZuIgPk8oBOVo6kDyfk9+LpKPfyXmLsyIPNf/CzRrULDupnamgVDFF3hG4QSoivev+KOHF09fWW8EyCH4Y671OYYjmS6OXUwPbepQKJV1pOqsmTStD48bF/AgjO4/VKOFljIWA/bIinIlcexbv5dnUz8kd/riAXdRXPFd+crCCXKbZB3aasIDrrJfLf3FJfekkmL6lB0FzbAjMJ6BaEAa+cHKOOvQImHOsPKM4kP5xdgVNaXrJsPX96evOJWGQxCu9gYHsBBi [...]
   },
   "Metadata": {
    "aws:cdk:path": "aws2/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ProjectapiLoadBalancerDNS43E7A664": {
   "Value": {
    "Fn::GetAtt": [
     "ProjectapiLB099E937B",
     "DNSName"
    ]
   }
  },
  "ProjectapiServiceURL72610E5F": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "ProjectapiLB099E937B",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
